{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 19,
  "lineage": "cb431a39-6213-638a-bebf-bb4fb63bfec2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/networkInterfaces/test_nic",
            "internal_domain_name_suffix": "vj2v2zid2iqulhnjzewmv4lcof.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/publicIPAddresses/test_publicip1",
                "subnet_id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/test_subnet1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2C-2D-40",
            "name": "test_nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "terraform_resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Compute/virtualMachines/test-machine"
          },
          "dependencies": [
            "azurerm_public_ip.ip",
            "azurerm_resource_group.terraform_rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.terraform_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/networkSecurityGroups/test_sg",
            "location": "westeurope",
            "name": "test_sg",
            "resource_group_name": "terraform_resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "dev_rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "104.56.175.169/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraform_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "dev_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/networkSecurityGroups/test_sg/securityRules/dev_rule",
            "name": "dev_rule",
            "network_security_group_name": "test_sg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraform_resources",
            "source_address_prefix": "104.56.175.169/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sg",
            "azurerm_resource_group.terraform_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/publicIPAddresses/test_publicip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "65.52.148.183",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "test_publicip1",
            "resource_group_name": "terraform_resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraform_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/test_subnet1",
            "name": "test_subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraform_resources",
            "virtual_network_name": "Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.terraform_rg",
            "azurerm_virtual_network.terraform_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sg_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/test_subnet1",
            "network_security_group_id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/networkSecurityGroups/test_sg",
            "subnet_id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/test_subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.sg",
            "azurerm_resource_group.terraform_rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.terraform_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terraform_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "655e79aa-e203-4521-9da9-c92ccaf96275",
            "id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/virtualNetworks/Vnet",
            "location": "westeurope",
            "name": "Vnet",
            "resource_group_name": "terraform_resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/test_subnet1",
                "name": "test_subnet1",
                "security_group": "/subscriptions/eb0ba5ab-6a44-4b16-b7a2-7ca3b022b84a/resourceGroups/terraform_resources/providers/Microsoft.Network/networkSecurityGroups/test_sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraform_rg"
          ]
        }
      ]
    }
  ]
}